<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageClient</string>
    <string name="hello_world">Hello world!</string>
    <string name="image_client">Image Client</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="action_settings">Settings</string>
    <string name="default_advance_search_options">Advance search options</string>
    <string name="default_image_size">Image Size</string>
    <string name="default_color_filter">Color Filter</string>
    <string name="default_image_type">Image Type</string>
    <string name="default_site_filter">Site filter</string>

    <string-array name="settings_image_types">
        <item> </item>
        <item>Face</item>
        <item>Photo</item>
        <item>Clipart</item>
        <item>Lineart</item>
    </string-array>

     <string-array name="settings_image_sizes">
        <item> </item>
        <item>Icon</item>
        <item>Medium</item>
        <item>XXLarge</item>
        <item>Huge</item>
    </string-array>
    
        <string-array name="settings_image_colors">
        <item> </item>
        <item>Black</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Gray</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Teal</item>
        <item>White</item>
        <item>Yello</item>
    </string-array>
        <string name="default_string_customize_settings">Customize your search:</string>
</resources>